--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="language" content="fr">
     <meta name="keywords" content="portfolio, développeur, gabriel briatte, gltdevlop, gabliltray">
     <meta name="author" content="Gltdevlop & Oural_1206">
-    <meta name="description" content="Site de portfolio fait par moi & Oural1206">
+
+      <meta property="og:title" content="L'HERBAG - Portfolio">
+      <meta property="og:description" content="Le Portfolio de Gabriel - L'HERBAG. Vous voulez en savoir plus sur son parcours et ses réalisations ? Visitez le site.">
+      <meta property="og:url" content="http://edl360.fr.com">
+      <meta property="og:image" content="https://www.monsupersite.com/favicon.ico">
+      <meta property="og:type" content="website">
+
+      <meta name="description" content="Le Portfolio de Gabriel - L'HERBAG. Vous voulez en savoir plus sur son parcours et ses réalisations ? Visitez le site.">
     <title>L'HERBAG - Portfolio</title>
   </head>
   <body>
