--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
       <meta property="og:title" content="L'HERBAG - Portfolio">
       <meta property="og:description" content="Le Portfolio de Gabriel - L'HERBAG. Vous voulez en savoir plus sur son parcours et ses réalisations ? Visitez le site.">
-      <meta property="og:url" content="http://edl360.fr.com">
-      <meta property="og:image" content="https://www.monsupersite.com/favicon.ico">
+      <meta property="og:url" content="http://edl360.fr">
+      <meta property="og:image" content="https://edl360.fr/favicon.ico">
       <meta property="og:type" content="website">
 
       <meta name="description" content="Le Portfolio de Gabriel - L'HERBAG. Vous voulez en savoir plus sur son parcours et ses réalisations ? Visitez le site.">
